--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@ body {
     background-color: #0D0D0D;
 }
 
+.bg {
+    background-color: #0D0D0D;
+}
+
 body::-webkit-scrollbar {
     width: 10px;
 }
